--- a/vize-be/src/main/resources/application.yml
+++ b/vize-be/src/main/resources/application.yml
@@ -5,8 +5,8 @@ spring:
     username: root
     password: root
     url: jdbc:postgresql://localhost/vize
-  sql:
-    init:
-      mode: always
-      schema-locations: classpath:/sql/schema.sql
-      data-locations: classpath:sql/data.sql
+#  sql:
+#    init:
+#      mode: always
+#      schema-locations: classpath:/sql/01_schema.sql
+#      data-locations: classpath:sql/03_data.sql
