--- a/vize-ui/package.json
+++ b/vize-ui/package.json
@@ -18,7 +18,12 @@
     "@unhead/vue": "^2.0.3",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.6",
+    "typescript": "^5.8.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-tsc": "^3.0.1"
+  },
+  "devDependencies": {
+    "sass-embedded": "^1.89.2"
   }
 }
