--- a/vize-ui/package.json
+++ b/vize-ui/package.json
@@ -15,9 +15,11 @@
     "@nuxt/icon": "1.15.0",
     "@nuxt/image": "1.10.0",
     "@nuxt/scripts": "0.11.8",
+    "@pinia/nuxt": "^0.11.1",
     "@unhead/vue": "^2.0.3",
     "eslint": "^9.0.0",
     "nuxt": "^3.17.6",
+    "pinia": "^3.0.3",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
