update ui dependencies, rename dtos, fix postgresql volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql
       - ./vize-be/src/main/resources/sql:/docker-entrypoint-initdb.d
 
 volumes:
   postgres_data:
+### NODE_OPTIONS="--no-experimental-webstorage" bun run dev
